Fri Aug 11 10:48:54 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables), htcommon/defaults.cc: Added
	maximum_page_buttons attribute, to limit buttons to less than
	maximum_pages.  Fixes PR#731 & PR#781.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl

Wed Aug  9 23:04:39 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* httools/htmerge.cc (mergeDB): Add fix to prevent duplicate
	documents when you merge a database with a copy of itself
	contributed by Lorenzo.

Wed Aug  9 22:58:39 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/parser.cc (score): Merged in patch contributed by
	Lorenzo Campedelli <lorenzo.campedelli@libero.it> and Arthur
	Prokosch <prokosch@aptima.com> to fix problems with AND operators
	and phrase matches.

Wed Aug  2 11:44:11 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables), htcommon/defaults.cc: Enhanced
	build_select_lists attribute, to generate not only single-choice
	select lists, but also select multiple lists, radio button lists
	and checkbox lists. Added explanation and examples in documentation.
	* htdoc/hts_selectors.html: Added detailed explanation of new feature.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl

Tue Aug  1 21:50:22 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/ParseTree.cc (Parse): Fix problems with token
	comparisons and fix thinko with HtWordToken parsing--previously
	didn't advance the parse step at all.

	* htsearch/*ParseTree.cc (Parse): Fix thinko with HtWordToken as
	above--here it acted as an infinite loop.

	* htdig/ExternalParser.cc (parse): Add shell quoting around
	content-type. Hard to exploit, but a server could potentially
	return a strange value that could then be exectuted locally.

Thu Jun 29 23:33:51 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/ParseTree.h, htsearch/ParseTree.cc: New parent class